# bird_stack

./: .env  .gitignore  README.md  data_playground.py  pyproject.toml
bird_stack/: __init__.py  app.py
bird_stack/db/: __init__.py
bird_stack/db/fauna_client/: __init__.py  fauna_client.py  fauna_client.pyi
bird_stack/db/models/: __init__.py  base.py  bird_data.py  utils.py
bird_stack/db/queries/: __init__.py  bird_query_wrapper.py  get_all_birds.fql  get_birds.py  utils.py
bird_stack/routers/: __init__.py  bird_router.py
frontend/: package-lock.json  package.json  svelte.config.js
frontend/project.inlang/: project_id  settings.json
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts
frontend/src/lib/components/: BirdItem.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  Header.svelte
frontend/src/routes/_demo/paraglide/: +page.svelte
rest_api_test/: birds.http
